# matter-oxide

./: .gitignore  Cargo.toml  README.md
client-ws/: Cargo.toml
common-ws/: Cargo.toml
common-ws/src/: lib.rs
controller/: Cargo.toml
controller/examples/: controller.rs  end_device.rs
controller/src/: constants.rs  controller.rs  data_model.rs  end_device.rs  exchange.rs  interaction_model.rs  lib.rs  message.rs  root_cert_manager.rs  tlv.rs
controller/src/cluster/: boolean_state.rs  level.rs  mod.rs  on_off.rs  template.rs
controller/src/cluster/utility/: admin_commissioning.rs  basic_information.rs  general_commissioning.rs  mod.rs  network_commissioning.rs  node_operational_cred.rs
controller/src/crypto/: keypair.rs  mod.rs  sha256.rs  spake2p.rs
controller/src/data_model/: device.rs  handler.rs
controller/src/interaction_model/: action.rs  mod.rs  transaction.rs
controller/src/message/: mod.rs  status_report.rs
controller/src/secure_channel/: case.rs  mod.rs  pake.rs  unsecured.rs
controller/src/session_context/: mod.rs  secure.rs  unsecured.rs
controller/src/transport/: mdns.rs  mod.rs  tcp.rs  udp.rs
controller/src/util/: mod.rs  state.rs  test_vectors.rs  time.rs
core/examples/: controller.rs  end_device.rs
core/src/: constants.rs  controller.rs  end_device.rs  exchange.rs  fabric.rs  lib.rs  root_cert_manager.rs  tlv.rs
core/src/cluster/: level.rs  mod.rs  on_off.rs  template.rs
core/src/cluster/utility/: admin_commissioning.rs  basic_information.rs  general_commissioning.rs  mod.rs  network_commissioning.rs
core/src/crypto/: spake2p.rs
core/src/data_model/: handler.rs  mod.rs
core/src/data_model/device_type/: mod.rs  root_node.rs
core/src/data_model/endpoint/: extended_color_light_endpoint.rs  mod.rs  root_endpoint.rs
core/src/experimental/: observer.rs
core/src/interaction_model/: mod.rs  path.rs  transaction.rs
core/src/message/: mod.rs  status_report.rs
core/src/secure_channel/: case.rs
core/src/session_context/: mod.rs  secure.rs
core/src/transport/: tcp.rs  udp.rs
core/src/util/: mod.rs
server-ws/: Cargo.toml
server-ws/src/: context.rs  device_controller.rs  main.rs  server.rs  storage_controller.rs
