[package]
name = "matter-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = [
    "serde_json/std",
    "hex/std",
    "rand/std",
    "x509-cert/std"
]
default = ["std"]
# default = []

[dependencies]
matter = { git = "https://github.com/project-chip/matter-rs", package= "matter-iot", default-features = false, features = ["crypto_rustcrypto"] }
libmdns = "0.7"
mdns = "3"


## requires std
serde_json = { version = "1", default-features = false, optional = true }

## no_std by default
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "2"
bytes = "1"
heapless = "0.7"
## crypto
rfc6979 = "0.4"
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12" }
pbkdf2 = { version = "0.12" }
hkdf = { version = "0.12" }
aes = { version = "0.8" }
ccm = { version = "0.5", default-features = false, features = ["alloc"] }
p256 = { version = "0.13.0", default-features = false, features = ["arithmetic", "ecdh", "ecdsa"] }
elliptic-curve = { version = "0.13.2" }
crypto-bigint = { version = "0.4", default-features = false }
## requires std
x509-cert = { version = "0.2.0", default-features = false, features = ["pem"] }

## optional no_std
hex = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
serde = { version =  "1", default-features = false, features = ["derive"] }
once_cell = { version = "1", default-features = false, features = [] }

## async
futures-util = { version = "0.3", default-features = false, features = ["async-await"] }
tokio = { version = "1", features = ["full"] } # TODO constrain features

[dev-dependencies]
hex-literal = "0.4"
