[package]
name = "matter-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["controller"]
# default = []
std = [
    "serde_json/std",
    "hex/std",
    "rand/std",
    "x509-cert/std"
]
# For devices that will control and administer others on the fabric.
# It can be possible for a controller to also act as an end-device.
controller = ["std-tokio"]
# Devices that expose their core functionality and don't control others.
end_device = []
# Suitable for end devices and bridges that don't need to be controllers.
std-smol = ["std", "smol"]
# Used by controllers and devices that don't have resource constraints.
std-tokio = ["std", "tokio"]

[dependencies]
libmdns = "0.7"
mdns = "3"

## requires std
serde_json = { version = "1", default-features = false, optional = true }

## no_std by default
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "2"
bytes = "1"
heapless = "0.7"
## crypto
rfc6979 = "0.4"
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12" }
pbkdf2 = { version = "0.12" }
hkdf = { version = "0.12" }
aes = { version = "0.8" }
ccm = { version = "0.5", default-features = false, features = ["alloc"] }
p256 = { version = "0.13.0", default-features = false, features = ["arithmetic", "ecdh", "ecdsa"] }
elliptic-curve = { version = "0.13.2" }
crypto-bigint = { version = "0.4", default-features = false }
## requires std
x509-cert = { version = "0.2.0", default-features = false, features = ["pem"] }

## optional no_std
hex = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false }
serde = { version =  "1", default-features = false, features = ["derive"] }
once_cell = { version = "1", default-features = false, features = [] }

## async
futures-util = { version = "0.3", default-features = false, features = ["async-await"] }
tokio = { version = "1", features = ["full"], optional = true } # TODO constrain features
smol = { version = "1", optional = true }

[dev-dependencies]
hex-literal = "0.4"
