[package]
name = "matter-controller-server-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

common = { package = "matter-controller-common-ws", path = "../common-ws" }